# Video-Sharing-Application

./: .env.example  .gitignore  README.md  frontend.py  main.py  pyproject.toml  requirements.txt  template.py
src/VideoSharingApp/: app.py  database.py  images.py  schemas.py  users.py
src/VideoSharingApp/constants/: auth.py
src/VideoSharingApp/core/: dependencies.py  lifespan.py
src/VideoSharingApp/routers/: health.py
src/VideoSharingApp/routers/v1/: feed.py  posts.py
src/VideoSharingApp/utils/: logger.py
